Añadidos atributos de items y sus interacciones en drops, managers, biomes y XP de skills